Fix double borders

--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
   height: min(75vw, 75vh);
   display: flex;
   flex-wrap: wrap;
+  border-top: 1px solid black;
+  border-left: 1px solid black;
 }
 
 button {
@@ -25,7 +27,6 @@ button {
 }
 
 .container > div {
-  width: 6.25%;
-  height: 6.25%;
-  border: 1px solid black;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
 }
